# cypher

./: .gitignore  COMMANDS.md  README.md  pyproject.toml  requirements.txt  setup.py
src/: __main__.py  config.py  exceptions.py  main.py
src/core/: app.py  auth.py  base_handler.py  core.py  crypto.py  encryption.py  secure_delete.py  secure_string.py  security.py  session_manager.py
src/data/: database.py
src/interface/: cli.py  colors.py  handlers.py  parser.py  views.py
src/ui/: cli.py  colors.py  commands.py  parser.py  views.py
src/utils/: formatters.py  validators.py
tests/: conftest.py  test_add.py  test_auth.py  test_complete.py  test_crypto.py  test_cryptographic_correctness.py  test_database.py  test_input_validation.py  test_integration.py  test_recovery.py  test_security_edge_cases.py  test_security_scenarios.py  test_ui_commands.py  test_validators.py
