[tool.poetry]
name = "cypher-cli"
version = "0.9.0"
description = "A secure local password manager."
authors = ["Kanishk C <kanishkc01@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10"
bcrypt = ">=5.0.0,<6.0.0"
cryptography = ">=46.0.3,<47.0.0"
argon2-cffi = ">=25.1.0,<26.0.0"

[tool.poetry.scripts]
cypher = "src.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"